# cloudnest-pilot

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements-locked.txt  requirements.txt  run.py  verify_api.py
cloudnest_pilot/: __init__.py  cli.py  config.py  core.py  demo.py  web.py
cloudnest_pilot/web/static/: app.js
cloudnest_pilot/web/templates/: chat.html
docs/: ARCHITECTURE.md  QUICKSTART_WINDOWS.md
tools/: __init__.py  aws.py  filesystem.py  ocp.py  registry.py  shell.py
