[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudnest-pilot"
version = "0.1.0"
description = "AI copilot for deploying and managing OpenShift clusters"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = [
    "openshift",
    "kubernetes",
    "aws",
    "ai-agent",
    "claude",
    "devops",
    "cluster-management",
    "infrastructure",
]
authors = [
    { name = "Cloudnest Infoworks", email = "connect@cloudnestinfoworks.com" },
]
maintainers = [
    { name = "Cloudnest Infoworks", email = "connect@cloudnestinfoworks.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Clustering",
]

dependencies = [
    "anthropic>=0.40.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://cloudnestinfoworks.com/pilot"
Documentation = "https://github.com/cloudnestinfoworks/cloudnest-pilot/tree/main/docs"
Repository = "https://github.com/cloudnestinfoworks/cloudnest-pilot"
Issues = "https://github.com/cloudnestinfoworks/cloudnest-pilot/issues"
Changelog = "https://github.com/cloudnestinfoworks/cloudnest-pilot/blob/main/CHANGELOG.md"

[project.scripts]
cloudnest-pilot = "cloudnest_pilot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudnest_pilot*", "tools*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
cloudnest_pilot = ["py.typed"]
"*" = ["templates/*.html", "static/*.js", "static/*.css"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PL",   # pylint
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",      # line too long (handled by black)
    "PLR0913",   # too many arguments
    "PLR2004",   # magic value (sometimes needed)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=cloudnest_pilot",
    "--cov=tools",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["cloudnest_pilot", "tools"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
